refactored controllers and routes
